# stignore-agent-old

./: .gitignore  Dockerfile  Dockerfile-dev  README.md  config.yml.example  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
scripts/: generate_test_data.py  start_dev_agent.sh
stignore_agent/: __init__.py  app.py  helpers.py
tests/: conftest.py  test_directories.py  test_stignore_changes.py  test_stignore_flush.py
