[metadata]
name = stignore-agent
version = attr: stignore_agent.VERSION
url = https://github.com/dalmura/stignore-agent-python
author = Dalmura
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = AGPLv3
description = An agent that allows interactions with the .stignore file on a machine
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = syncthing stignore

[options]
install_requires =
    PyYAML~=6.0
    Flask~=2.0.2

python_requires = >=3.9

scripts = 
    bin/stignore-agent

packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pylint~=2.11.2
    black~=21.12b0
    pytest~=6.2.5
